add feed, site pages, author metadata

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,7 @@
   <body>
 
       <!-- Docs master nav -->
-    {% include nav-main.html %}
+    {% include nav-pages.html %}
     
     <!-- Page content of course! -->
     {{ content }}
