--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   <body>
 
       <!-- Docs master nav -->
-    {% include nav-pages.html %}
+    {% include nav-default.html %}
     
     <main class="bs-masthead" id="content" role="main">
         <div class="wrapper">
@@ -17,10 +17,13 @@
               <p>{{ page.tagline }}</p>
               <hr>
               <span class="credits left"><a href="{{ site.base_url }}"><< Back Home</a></span>
-            </div>
+            </div>      
+            
         
             <!-- Page content of course! -->
             {{ content }}
+            
+            {% include meta.html %}
            </section>
 
         </div>
