--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<title>KindaSimple Code by kindasimple</title>
-<link rel="stylesheet" href="{{ site.base_url }}stylesheets/styles.css">
-<link rel="stylesheet" href="{{ site.base_url }}stylesheets/pygment_trac.css">
+<title>KindaSimple Code by Evan White</title>
+<link rel="stylesheet" href="{{ site.base_url }}/stylesheets/styles.css">
+<link rel="stylesheet" href="{{ site.base_url }}/stylesheets/pygment_trac.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="{{ site.base_url }}javascripts/respond.js"></script>
 <!--[if lt IE 9]>
