--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@
   <body>
 
       <!-- Docs master nav -->
-    {% include nav-default.html %}
+    {% include nav-posts.html %}
     
     <main class="bs-masthead" id="content" role="main">
         <div class="wrapper">
