Update pages and posts to pure blog format. Improve metadata for posts. Change page content to make sense with new site layout.

--- a/_includes/blog-footer.html
+++ b/_includes/blog-footer.html
@@ -1,6 +1,7 @@
             <footer class="footer">
                 <div class="pure-menu pure-menu-horizontal pure-menu-open">
                     <ul>
+                        <li><a href="{{ site.nav-rss }}">RSS</a></li>
                         <li><a href="{{ site.nav-about }}">About</a></li>
                         <li><a href="{{ site.link-twitter }}">Twitter</a></li>
                         <li><a href="{{ site.link-github }}">Github</a></li>
