--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,11 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
-<title>KindaSimple Code by Evan White</title>
-<link rel="stylesheet" href="{{ site.base_url }}/stylesheets/styles.css">
-<link rel="stylesheet" href="{{ site.base_url }}/stylesheets/pygment_trac.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="{{ site.base_url }}javascripts/respond.js"></script>
-<!--[if lt IE 9]>
-  <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<!--[if lt IE 8]>
-<link rel="stylesheet" href="stylesheets/ie.css">
-<![endif]-->
-<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="A layout example that shows off a blog page with a list of posts.">
+
+    <title>KindaSimple | {{ page.title }}</title>
+
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+<link rel="stylesheet" href="{{ site.link-base_url }}/stylesheets/blog.css">
+<link rel="stylesheet" href="{{ site.link-base_url }}/stylesheets/extras.css">
