--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -1,9 +1,9 @@
   <div id="header">
     <nav>
-      <li class="fork"><a href="https://github.com/kindasimple">GitHub</a></li>
-      <li class="downloads"><a href="{{ site.coderbits }}">Coderbits</a></li>
-      <li class="downloads"><a href="{{ site.stack_overflow }}">Stack Overflow</a></li>
-      <li class="downloads"><a href="{{ site.twitter }}">Twitter</a></li>
+      <li class="fork"><a href="{{ site.link-github }}">GitHub</a></li>
+      <li class="downloads"><a href="{{ site.link-coderbits }}">Coderbits</a></li>
+      <li class="downloads"><a href="{{ site.link-stack_overflow }}">Stack Overflow</a></li>
+      <li class="downloads"><a href="{{ site.link-twitter }}">Twitter</a></li>
       <li class="title">Profiles:</li>
     </nav>
   </div><!-- end header -->
