--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,54 +1,37 @@
 <!doctype html>
-<html>
-  <head>
-    <!-- Meta, title, CSS, favicons, etc. -->
-    {% include header.html %}
-  </head>
-  <body>
+<html lang="en">
+    <head>
+        <!-- Meta, title, CSS, favicons, etc. -->
+        {% include header.html %}
 
-      <!-- Docs master nav -->
-    {% include nav-posts.html %}
-    
-    <main class="bs-masthead" id="content" role="main">
-        <div class="wrapper">
-          <section>
-            <div id="title">
-              <h1>{{ page.title }}</h1>
-              <p>{{ page.tagline }}</p>
-              <hr>
-              <span class="credits left"><a href="{{ site.base_url }}"><< Back Home</a></span>
-            </div>      
-            
-        
-            <!-- Page content of course! -->
-            {{ content }}
-            
-            {% include meta.html %}
-           </section>
+    </head>
+    <body>
 
-           <section>
-              <div id="disqus_thread"></div>
-              <script type="text/javascript">
-                  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-                  var disqus_shortname = 'kindasimplesolutions'; // required: replace example with your forum shortname
+        <div class="pure-g-r" id="layout">
 
-                  /* * * DON'T EDIT BELOW THIS LINE * * */
-                  (function() {
-                      var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-                      dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-                      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-                  })();
-              </script>
-              <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-              <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
-           </section>
+    {% include blog-sidebar.html %}
 
-        </div>
-    </main>
-    
-    <!-- JS and analytics only. -->
-    {% include footer.html %}
+    <div class="pure-u-1">
+        <div class="content">
+            <!-- A wrapper for all the blog posts -->
+            <div class="posts">
+   
+            <section>
+              <div id="title">
+                <h1>{{ page.title }}</h1>
+                <p>{{ page.tagline }}</p>
+
+              </div>      
+              
+          
+              <!-- Page content of course! -->
+              {{ content }}
+              
+             </section>
+         
+
+            <!-- JS and analytics only. -->
+            {% include blog-footer.html %}
 
   </body>
 </html>
