--- a/_includes/apps.html
+++ b/_includes/apps.html
@@ -1,6 +1,6 @@
  <h1 class="content-subhead">Apps</h1>
 
 <ul>
-  <li>Pittsburgh TechFest: [<a href="/PGHTechFest">Windows Phone</a>], [<a href="{{ site.pgh_techfest-win8 }}">Windows 8</a>], [<a href="{{ site.pgh_techfest-code }}">Source</a>]</li>
-  <li>Recollection: [<a href="/MajorSystem">Windows Phone</a>], [<a href="{{ site.recollection-win8 }}">Windows 8</a>], [<a href="http://mnemonal.com">Website</a>]</li>
+  <li>Pittsburgh TechFest: [<a href="/PGHTechFest">Windows Phone</a>], [<a href="{{ site.link-pgh_techfest-win8 }}">Windows 8</a>], [<a href="{{ site.pgh_techfest-code }}">Source</a>]</li>
+  <li>Recollection: [<a href="/MajorSystem">Windows Phone</a>], [<a href="{{ site.link-recollection-win8 }}">Windows 8</a>], [<a href="http://mnemonal.com">Website</a>]</li>
 </ul>
