Add social icons

--- a/_includes/apps.html
+++ b/_includes/apps.html
@@ -2,5 +2,6 @@
 
 <ul>
   <li>Pittsburgh TechFest: [<a href="/PGHTechFest">Windows Phone</a>], [<a href="{{ site.link-pgh_techfest-win8 }}">Windows 8</a>], [<a href="{{ site.pgh_techfest-code }}">Source</a>]</li>
-  <li>Recollection: [<a href="/MajorSystem">Windows Phone</a>], [<a href="{{ site.link-recollection-win8 }}">Windows 8</a>], [<a href="http://mnemonal.com">Website</a>]</li>
+  <li>Recollection: [<a href="/MajorSystem">Windows Phone</a>], [<a href="{{ site.link-recollection-win8 }}">Windows 8</a>], [<a href="{{ site.link-recollection-web }}">Website</a>]</li>
+  <li>Big Arms Club: [<a href="{{ site.link-big_arms_club-web }}">Website</a>]</li>
 </ul>
