--- a/_includes/blog-sidebar.html
+++ b/_includes/blog-sidebar.html
@@ -21,5 +21,11 @@
                 </li>
             </ul>
         </nav>
+
+        <div>
+            <a href="{{ site.nav-rss }}"><img src="{{ site.base_path }}/images/social/rss.png" /></a>
+            <a href="{{ site.link-twitter }}"><img src="{{ site.base_path }}/images/social/twitter.png" /></a>
+            <a href="{{ site.link-github }}"><img src="{{ site.base_path }}/images/social/github.png" /></a>
+        </div>
     </header>
 </div>
