--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
 <meta name="description" content="A layout example that shows off a blog page with a list of posts.">
 
     <title>KindaSimple | {{ page.title }}</title>
-
+<script src="{{ site.link-live_reload-url }}"></script>
+<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
 <link rel="stylesheet" href="{{ site.link-base_url }}/stylesheets/blog.css">
 <link rel="stylesheet" href="{{ site.link-base_url }}/stylesheets/extras.css">
