--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,7 +31,7 @@
          
 
             <!-- JS and analytics only. -->
-            {% include blog-footer.html %}
+            {% include footer.html %}
 
   </body>
 </html>
