Add prettyprint code. Change markdown renderer from redcarpet to kramdown. Edit some cloud imagery in a post. Include coderay for github flavored code fences. Apply google-prettifier as YUI module to code blocks that escape coderay.

--- a/stylesheets/extras.css
+++ b/stylesheets/extras.css
@@ -8,3 +8,16 @@ border-radius: 50%;
 	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
 }
+
+pre.prettyprint{
+  width:100%;
+
+}
+.highlight {
+	padding: 0px;
+	font-size: smaller;
+}
+
+.highlight pre code {
+
+}
