--- a/_includes/blog-footer.html
+++ b/_includes/blog-footer.html
@@ -28,15 +28,37 @@
 </div>
 
 <script src="http://yui.yahooapis.com/3.12.0/build/yui/yui.js"></script>
-<script>
-YUI().use('node-base', 'node-event-delegate', function (Y) {
+<script type="text/javascript">
+YUI({
+  modules: {
+      'prettify': {
+          fullpath: '{{ site.link-base_url }}javascripts/prettify.js',
+          requires: ['prettify-css']
+      },
+      'prettify-css': {
+          fullpath: '{{ site.link-base_url }}stylesheets/prettify.css'
+      }
+  }
+}).use('node-base', 'node-event-delegate', function (Y) {
     // This just makes sure that the href="#" attached to the <a> elements
     // don't scroll you back up the page.
     Y.one('body').delegate('click', function (e) {
         e.preventDefault();
     }, 'a[href="#"]');
+}).use('prettify', function(Y) {
+    // It's loaded, now make everything pretty!
+    // were adding the tags twice to add linenums
+    $( document ).ready(function() {
+      $(this).find( "pre" ).each(function(){
+        $(this).find("code").parent().addClass("prettyprint linenums");
+      })
+
+      Y.prettyPrint();
+    });
+
 });
 </script>
+<link rel="stylesheet" href="{{ site.link-base_url }}stylesheets/coderay.css">
 <script type="text/javascript">
   var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
   document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
