--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 
     <title>KindaSimple | {{ page.title }}</title>
 <script src="{{ site.link-live_reload-url }}"></script>
-<script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=css&skin=sunburst"></script>
+<script src="/javascripts/jquery-1.8.3.min.js"></script>
 <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
 <link rel="stylesheet" href="{{ site.link-base_url }}stylesheets/blog.css">
 <link rel="stylesheet" href="{{ site.link-base_url }}stylesheets/extras.css">
